[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "leakguard-env"
version = "0.1.0"
description = "A supply-chain anomaly detection simulator using openenv"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi",
    "uvicorn",
    "pydantic",
    "openai",
    "requests",
    "openenv-core>=0.2.0",
    "torch",
    "transformers",
    "peft",
    "accelerate"
]

[project.scripts]
server = "server.app:main"

[tool.hatch.build.targets.wheel]
packages = ["server"]